switching to StructuredTaskScope for Eff.Parallel